# logging_test_app

./: CMakeLists.txt  main.cpp
